# PyUtauCli

./: .gitignore  pyproject.toml
PyUtauCli/: __init__.py
PyUtauCli/common/: convert_notenum.py
PyUtauCli/projects/: Entry.py  EntryBase.py  Note.py  Render.py  RenderNote.py  Ust.py  UtauPlugin.py
PyUtauCli/settings/: logger.py  settings.py  win_utau.py
PyUtauCli/voicebank/: oto.py  prefixmap.py  voicebank.py
