[project]
name        = 'PyUtauCli'
version     = '0.0.1'
authors     = [{ name = 'delta-kuro', email = 'sankaku.kuro@gmail.com' }]
description = ''
readme      = 'README.md'
license     = { file = 'LICENSE' }
classifiers = ['Programming Language :: Python :: 3']

[build-system]
requires      = ['setuptools >= 77.0.3']
build-backend = 'setuptools.build_meta'

[tool.setuptools.packages.find]
include = ['PyUtauCli']

[tool.ruff.lint]
select = ['B', 'C4', 'W', 'E', 'F', 'I', 'S', 'ARG', 'PLE', 'PLW', 'RET', 'SIM', 'UP', 'T20', 'EXE', 'EM']
ignore = [
    'E501', # line-too-long
]

[tool.ruff.format]
line-ending = 'lf'
quote-style = 'single'
